module(
    name = "grpc-httpjson-transcoding",
    version = "",
)

bazel_dep(name = "abseil-cpp", version = "20230802.1", repo_name = "com_google_absl")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "gazelle", version = "0.45.0", repo_name = "bazel_gazelle")
bazel_dep(name = "google_benchmark", version = "1.8.3", repo_name = "com_google_benchmark")
bazel_dep(name = "googleapis", version = "0.0.0-20250826-a92cee39", repo_name = "com_google_googleapis")
bazel_dep(name = "googleapis-cc", version = "1.0.0")
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_google_googletest")
bazel_dep(name = "nlohmann_json", version = "3.11.3", repo_name = "com_github_nlohmann_json")
bazel_dep(name = "protobuf", version = "29.3", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_go", version = "0.57.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "proto-converter", repo_name = "com_google_protoconverter")

git_override(
    module_name = "proto-converter",
    commit = "2458ed8ea405b47c1960f0b0af211efdf0e057a0",
    remote = "https://github.com/mmorel-35/proto-converter.git",
)

bazel_dep(name = "rules_ruby", version = "0.20.1")
bazel_dep(name = "rules_python", version = "1.6.3")

bazel_dep(name = "rules_fuzzing", version = "0.6.0", dev_dependency = True)

switched_rules = use_extension("@com_google_googleapis//:extensions.bzl", "switched_rules")
switched_rules.use_languages(
    cc = True,
)
use_repo(switched_rules, "com_google_googleapis_imports")

# -- bazel_dep definitions -- #

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
# -- use_repo_rule statements -- #


http_archive(
  name = "io_bazel_rules_docker",
  urls = [
    "https://github.com/bazelbuild/rules_docker/releases/download/v0.25.0/rules_docker-v0.25.0.tar.gz"
  ],
  sha256 = "b1e80761a8a8243d03ebca8845e9cc1ba6c82ce7c5179ce2b295cd36f7e394bf",
)
# -- repo definitions -- #
